--- a/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
@@ -2,12 +2,12 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  #generateName: cleanup-after-sync-
-  labels:
-    codefresh.io/cert: cleanup-job  
+  generateName: cleanup-after-sync-
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "20"
+  labels:
+    codefresh.io/cert: cleanup-job  
 spec:
   template:
     spec:
