--- a/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
@@ -2,12 +2,12 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  #generateName: disable-alerts-
-  labels:
-    codefresh.io/cert: disable-job   
+  generateName: disable-alerts-
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "20"
+  labels:
+    codefresh.io/cert: disable-job   
 spec:
   template:
     spec:
