--- a/sync-hooks-waves/06-waves-and-hooks/grafana-notify.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/grafana-notify.yml
@@ -2,11 +2,11 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  #generateName: grafana-notify-
-  labels:
-    codefresh.io/cert: grafana-job   
+  generateName: grafana-notify- 
   annotations:
     argocd.argoproj.io/sync-wave: "-10"
+  labels:
+    codefresh.io/cert: grafana-job  
 spec:
   template:
     spec:
