--- a/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
@@ -2,12 +2,12 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  #generateName: slack-notify-
-  labels:
-    codefresh.io/cert: slack-job   
+  generateName: slack-notify-
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "30"
+  labels:
+    codefresh.io/cert: slack-job 
 spec:
   template:
     spec:
