--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -2,12 +2,12 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  #generateName: smoke-tests-
-  labels:
-    codefresh.io/cert: smoke-job   
+  generateName: smoke-tests-
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "10"
+  labels:
+    codefresh.io/cert: smoke-job   
 spec:
   template:
     spec:
