--- a/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: cleanup-after-sync-
+  name: cleanup-after-sync
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "20"
