--- a/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: my-db-upgrade-
+  name: my-db-upgrade
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "10"
