--- a/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: disable-alerts-
+  name: disable-alerts
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/sync-wave: "20"
