--- a/sync-hooks-waves/06-waves-and-hooks/enable-alerts.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/enable-alerts.yml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   namespace: example06
-  generateName: enable-alerts- 
+  name: enable-alerts
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/sync-wave: "30
